--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <section class="Container">
             <div class="main-ctn">
                 <div class="top-img">
-                    <img src="./bg-pattern-card.svg" alt="">
+                    <img src="./img/bg-pattern-card.svg" alt="">
                 </div>
                 <div class="victor">
-                    <img src="./image-victor.jpg" alt="">
+                    <img src="./img/image-victor.jpg" alt="">
                 </div>
                 <div class="text">
-                    <h1>Victor Crest <span>  26</span></h1>
+                    <h1>Victor Crest <span>26</span></h1>
                     <p><span>London</span></p>
                 </div>
                 <hr>
